--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "assert": "^2.1.0",
+    "big-integer": "^1.6.52",
+    "buffer": "^6.0.3",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
+    "node-rsa": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -41,6 +49,16 @@
     ]
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "@types/node-rsa": "^1.1.4",
     "tailwindcss": "^3.4.4"
+  },
+  "compilerOptions": {
+    "target": "es2015",
+    "lib": [
+      "dom",
+      "es2015",
+      "es2017"
+    ]
   }
 }
